maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: not found: value estDevantMur
    if (r==0 && !estDevantMur())
                 ^